updated wofi theme for arcane theme

--- a/.config/colorschemes/Arcane/wofi/style.css
+++ b/.config/colorschemes/Arcane/wofi/style.css
@@ -1,7 +1,6 @@
 * {
   font-familty: 'CaskaydiaCove Nerd Font', monospace;
   font-size: 16px;
-  color: #ffffff;
   background-color: transparent;
   border: none;
   margin: 0;
@@ -13,7 +12,6 @@ window {
   border: 2px solid #B0FEFE; /* neon red border */
   border-radius: 16px;
   padding: 10px;
-  box-shadow: 0 0 15px #B0FEFE;
 }
 
 #input {
@@ -25,6 +23,7 @@ window {
   border: 2px solid #9340A6; /* neon purple border */
   outline: none;
   box-shadow: 0 0 6px #9340A6;
+
 }
 
 #inner-box {
@@ -40,6 +39,7 @@ window {
 }
 
 #entry {
+  color: #ffffff;
   padding: 8px 12px;
   border-radius: 12px;
   background-color: #2d2d44;
@@ -49,8 +49,9 @@ window {
 
 #entry:selected {
   background-color: #B0FEFE;
-  color: #000000;
-  box-shadow: 0 0 10px #B0FEFE;
+  border: 3px solid #9340A6; /* neon purple border */
+  color: #9340A6;
   transform: scale(1.02);
+  border-radius: 12px;
 }
 
