--- a/wofi/.config/wofi/style.css
+++ b/wofi/.config/wofi/style.css
@@ -1,6 +1,7 @@
 * {
   font-familty: 'CaskaydiaCove Nerd Font', monospace;
   font-size: 16px;
+  color: #ffffff;
   background-color: transparent;
   border: none;
   margin: 0;
@@ -9,9 +10,10 @@
 
 window {
   background-color: rgba(0, 0, 0, 0.95); /* dark backdrop */
-  border: 2px solid #B0FEFE; /* neon red border */
+  border: 2px solid #990104; /* neon red border */
   border-radius: 16px;
   padding: 10px;
+  box-shadow: 0 0 15px #990104;
 }
 
 #input {
@@ -20,10 +22,9 @@ window {
   border-radius: 12px;
   background-color: #1b1b2f;
   color: #ffffff;
-  border: 2px solid #9340A6; /* neon purple border */
+  border: 2px solid #D883AF; /* neon purple border */
   outline: none;
-  box-shadow: 0 0 6px #9340A6;
-
+  box-shadow: 0 0 6px #D883AF;
 }
 
 #inner-box {
@@ -39,7 +40,6 @@ window {
 }
 
 #entry {
-  color: #ffffff;
   padding: 8px 12px;
   border-radius: 12px;
   background-color: #2d2d44;
@@ -48,10 +48,9 @@ window {
 }
 
 #entry:selected {
-  background-color: #B0FEFE;
-  border: 3px solid #9340A6; /* neon purple border */
-  color: #9340A6;
+  background-color: #990104;
+  color: #000000;
+  box-shadow: 0 0 10px #990104;
   transform: scale(1.02);
-  border-radius: 12px;
 }
 
