--- a/colorschemes/.config/colorschemes/Arcane/waybar/style.css
+++ b/colorschemes/.config/colorschemes/Arcane/waybar/style.css
@@ -8,7 +8,6 @@
   transition: background 0.3s ease;
 }
 
-
 window#waybar {
   background-color: rgba(0, 0, 0, 0.3);
   border-bottom: 2px solid #9340A6;
@@ -22,23 +21,26 @@ window#waybar.hidden{
 #workspaces button {
   background: transparent;
   color: #B0FEFE;
-  padding: 2px 10px;
-  margin: 2px;
+  margin: 2px 1px;
+  padding: 0 0;
 }
 
 #workspaces button.active {
   background-color: #B0FEFE;
   color: #9340A6;
   margin-bottom: 5px;
+  padding: 0 0;
 }
 
 #workspaces button.empty{
   color: #9340A6;
+  padding: 0 0;
 }
 
 #workspace button.empty.active{
  background-color: #530D0B;
  color: #323d49;
+ padding: 0 0;
 }
 
 #clock,
@@ -47,14 +49,14 @@ window#waybar.hidden{
 #pulseaudio,
 #tray,
 #custom-mediaplayer.paused,
+#disk,
 #custom-launcher {
   background-color: #9340A6;
   color: #B0FEFE;
   border-radius: 6px;
-  margin: 3px 10px;
+  margin: 3px 3px;
   margin-bottom: 10px;
   padding: 5px 12px;
-  transition: all 0.3s ease-in-out;
 }
 
 #custom-mediaplayer.playing{
