--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -8,10 +8,15 @@
   transition: background 0.3s ease;
 }
 
+
+center{
+  margin-right: 10px;
+}
+
 window#waybar {
-  background: #140D02;
-  border-bottom: 2px solid #530D0B;
-  color: #DB83B0;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-bottom: 2px solid #9340A6;
+  color: #B0FEFE;
 }
 
 window#waybar.hidden{
@@ -20,24 +25,27 @@ window#waybar.hidden{
 
 #workspaces button {
   background: transparent;
-  color: #DB83B0;
-  padding: 2px 10px;
-  margin: 2px;
+  color: #B0FEFE;
+  margin: 2px 1px;
+  padding: 0 0;
 }
 
 #workspaces button.active {
-  background-color: #530D0B;
-  color: #DB83B0;
+  background-color: #B0FEFE;
+  color: #9340A6;
   margin-bottom: 5px;
+  padding: 0 0;
 }
 
 #workspaces button.empty{
-  color: #763d9e;
+  color: #9340A6;
+  padding: 0 0;
 }
 
 #workspace button.empty.active{
  background-color: #530D0B;
  color: #323d49;
+ padding: 0 0;
 }
 
 #clock,
@@ -46,22 +54,23 @@ window#waybar.hidden{
 #pulseaudio,
 #tray,
 #custom-mediaplayer.paused,
+#disk,
 #custom-launcher {
-  background-color: #1a1a2e;
-  color: #DB83B0;
+  background-color: #9340A6;
+  color: #B0FEFE;
   border-radius: 6px;
-  margin: 3px 10px;
+  margin: 3px 3px;
   margin-bottom: 10px;
-  padding: 0 10px;
+  padding: 5px 12px;
 }
 
 #custom-mediaplayer.playing{
-  background-color: #DB83B0;
-  color: #1a1a2e;
+  background-color: #B0FEFE;
+  color: #9340A6;
   border-radius: 6px;
   margin: 3px 10px;
   margin-bottom: 10px;
-  padding: 0 10px;
+  padding: 5px 12px;
 }
 
 #pulseaudio.muted {
